--- a/app/views/users/_mypage-content.html.haml
+++ b/app/views/users/_mypage-content.html.haml
@@ -18,3 +18,32 @@
   %section.products-area
     %h2 契約中のプラン
     %article.products
+      .right-box
+        %figure.photo
+          %img{:alt => "", :height => "184", :s3 => "1", :src => "/project_images/#{@project.image}", :ssl => "1", :width => "280"}/
+      .left-box
+        %h3
+          %a{:href => ""} 【第４期】搾りたて牛乳で作る感動を牧場から。ASUKAの長期熟成ホールチーズ
+        %ul.data
+          %li
+            数量
+            %span １口
+          %li{:style => "text-align: right;"}
+            %a.change-address.continue2{:href => ""}
+              %i.sprite-2x.icon-arrow-b-w
+              送り先情報変更
+        %address.shop-info
+          .shop-name
+            .thum
+              %figure.shop
+                %img{:alt => "", :height => "30", :s3 => "1", :src => "", :ssl => "1", :width => "30"}/
+            %h3 ASUKAのチーズ工房
+          %h3
+            .shop
+          %ul
+            %li
+              %i.sprite-2x.icon-phone
+              0145-42-5416
+            %li
+              %i.sprite-2x.icon-mail-b
+              kitagawahana@yahoo.co,jp
