--- a/app/views/orders/index.html.haml
+++ b/app/views/orders/index.html.haml
@@ -45,7 +45,7 @@
                 %input#total_data{:name => "", :type => "hidden", :value => "10000"}/
 
               .btn-area
-                %a{:href => "", :class =>"btn-nomal", :style => "width: 130px;"} 戻る
+                %a{:href => "/projects/#{params[:project_id]}", :class =>"btn-nomal", :style => "width: 130px;"} 戻る
                 %input{:id => "order_submit", :class => "submit icon-arrow", :style => "width: 130px;", :type => "submit", :value =>"次に進む"}
 
 
