background insert movie

--- a/app/views/projects/_hero.html.haml
+++ b/app/views/projects/_hero.html.haml
@@ -1,36 +1,40 @@
 .hero
-  %header.header
-    %h1
-      OWNERS
-      %a{:href => "/"}
-        %i.sprite-2x.logo
-    %nav
-      %ul.h-navi
-        %li
-          %a{:href => "/about"}
-            %i.sprite-2x.icon-q
-            OWNNERSについて
-        %li
-          %a{:href => "/about"}
-            %i.sprite-2x.icon-book
-            使い方
-        - if @current_user
+  %script{src: "http://code.jquery.com/jquery-2.2.4.min.js"}
+  %script{src: "https://cdnjs.cloudflare.com/ajax/libs/jquery.mb.YTPlayer/3.0.9/jquery.mb.YTPlayer.min.js"}
+  %section.big-background
+    %a#bgndVideo.player{"data-property" => "{videoURL:'https://www.youtube.com/watch?v=Bgl9YwQoywM',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1,showControls: false,showYTLogo: false}"}
+    %header.header
+      %h1
+        OWNERS
+        %a{:href => "/"}
+          %i.sprite-2x.logo
+      %nav
+        %ul.h-navi
           %li
-            %a{:href => "/users/#{@current_user.id}"}
-              =@current_user.name
-              さん
+            %a{:href => "/about"}
+              %i.sprite-2x.icon-q
+              OWNNERSについて
           %li
-            %a{:href => "/projects/new"}
-              プロジェクト投稿
-        - else
-          %li
-            %a{:href => "/signup"}
-              %i.sprite-2x.icon-plus
-                会員登録
-          %li
-            %a{:href => "/login"}
-              %i.sprite-2x.icon-login
-                ログイン
+            %a{:href => "/about"}
+              %i.sprite-2x.icon-book
+              使い方
+          - if @current_user
+            %li
+              %a{:href => "/users/#{@current_user.id}"}
+                =@current_user.name
+                さん
+            %li
+              %a{:href => "/projects/new"}
+                プロジェクト投稿
+          - else
+            %li
+              %a{:href => "/signup"}
+                %i.sprite-2x.icon-plus
+                  会員登録
+            %li
+              %a{:href => "/login"}
+                %i.sprite-2x.icon-login
+                  ログイン
 
 
 
