--- a/app/assets/stylesheets/project/hero.scss
+++ b/app/assets/stylesheets/project/hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  background-image: url(https://s3-ap-northeast-1.amazonaws.com/owners-pro/ProductContent/748/content_image/w740h420_20862262_1360004164097970_743720065_o.jpg);
+  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAABytg0kAAAAFElEQVQYV2NkYGAwZmBgOMvIAAUACvkBAyxLoMgAAAAASUVORK5CYII=)repeat;
   background-size: cover;
   height: 690px;
   width: 100%;
@@ -51,7 +51,6 @@
 
 .message01 {
   overflow: hidden;
-  // text-indent: 100%;
   font-size: 40px;
   white-space: nowrap;
   display: block;
@@ -65,7 +64,6 @@
 
 .message02 {
   overflow: hidden;
-  // text-indent: 100%;
   white-space: nowrap;
   display: block;
   width: 751px;
@@ -100,4 +98,32 @@
   top: 450px;
   left: 34%;
 }
+
+// 動画部分
+.big-background {
+    z-index:550;
+    text-align:center;
+    height:100vh;
+    position:relative;
+    overflow:hidden;
+    background-position:center bottom;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
