--- a/app/assets/stylesheets/project/item-bg.scss
+++ b/app/assets/stylesheets/project/item-bg.scss
@@ -4,11 +4,12 @@
 }
 
 .items-area {
-  width: 1100px;
+  width: 100%;
   margin: 0 auto;
   padding-top: 30px;
   float: left;
   padding-bottom: 106px;
+  background-color: #fff;
 }
 
 .items-area:before {
@@ -17,7 +18,7 @@
 }
 
 .item-link {
-  width: 340px;
+  width: 400px;
   display: block;
   float: left;
   margin-right: 20px;
@@ -29,7 +30,7 @@
   display: block;
   float: left;
   margin-right: 40px;
-  margin-left: 120px;
+  margin-left: 80px;
   position: relative;
   margin-bottom: 48px;
 
