--- a/app/assets/stylesheets/project/message.scss
+++ b/app/assets/stylesheets/project/message.scss
@@ -51,6 +51,11 @@
   display: table-cell;
   padding-right: 50px;
 
+  .sprite-2x {
+    font-size: 30px;
+    color: orange;
+  }
+
   i {
     width: 41px;
     margin: 0 auto 10px;
