--- a/app/views/projects/_message.html.haml
+++ b/app/views/projects/_message.html.haml
@@ -8,25 +8,25 @@
       OWNERS 利用ステップ
   .step
     .process
-      %i.sprite-2x.icon-step01
+      %i{class: "fa fa-search sprite-2x"}
       %h3
         %span 1.
         プランを探す
       %p 生産者が提供しているプランからお気に入りのオーナー制度を見つけてください
     .process
-      %i.sprite-2x.icon-step02
+      %i{class: "fa fa-user sprite-2x"}
       %h3
         %span 2.
         オーナーになる
       %p 商品の送り先など必要な情報を入力して現在募集中のオーナー制度に登録してください
     .process
-      %i.sprite-2x.icon-step03
+      %i{class: "fa fa-gratipay sprite-2x"}
       %h3
         %span 3.
         プロセスを楽しむ
       %p 生産者から届く生産状況など様々な情報をOWNERS上でチェックすることができます
     .process
-      %i.sprite-2x.icon-step04
+      %i{class: "fa fa-shopping-bag sprite-2x"}
       %h3
         %span 4.
         商品が届く
