--- a/app/assets/stylesheets/project/hero.scss
+++ b/app/assets/stylesheets/project/hero.scss
@@ -1,6 +1,6 @@
 .hero {
-  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAABytg0kAAAAFElEQVQYV2NkYGAwZmBgOMvIAAUACvkBAyxLoMgAAAAASUVORK5CYII=)repeat;
-  background-size: cover;
+  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAGElEQVQYV2NkYGD4z8DAwMgABXAG0QL/AUHpAgRqouUfAAAAAElFTkSuQmCC)repeat;
+  background: cover;
   height: 690px;
   width: 100%;
   overflow: hidden;
@@ -49,7 +49,7 @@
   }
 }
 
-.message01 {
+.message00 {
   overflow: hidden;
   font-size: 40px;
   white-space: nowrap;
@@ -57,7 +57,7 @@
   width: 950px;
   position: absolute;
   top: 260px;
-  left: 55%;
+  left: 51%;
   transform: translateX(-50%);
   letter-spacing: 0.5em;
 }
@@ -69,7 +69,7 @@
   width: 751px;
   position: absolute;
   top: 350px;
-  left: 62%;
+  left: 49%;
   font-size: 30px;
   transform: translateX(-50%);
 }
@@ -96,7 +96,7 @@
   position: absolute;
   transition: all 0.2s;
   top: 450px;
-  left: 34%;
+  left: 39%;
 }
 
 // 動画部分
@@ -108,22 +108,3 @@
     overflow:hidden;
     background-position:center bottom;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
