--- a/app/assets/stylesheets/project/item-bg.scss
+++ b/app/assets/stylesheets/project/item-bg.scss
@@ -49,7 +49,6 @@
   left: 40px;
   z-index: 2;
   display: inline-block;
-  // background-image: url(https://s3-ap-northeast-1.amazonaws.com/owners-pro/Product/71/main_image/w340h223_20862262_1360004164097970_743720065_o.jpg);
   background-repeat: no-repeat;
   background-position: -67px 0px;
   width: 61px;
@@ -84,12 +83,12 @@
   margin-left: 25px;
 }
 
-.place {
+.region {
   display: table-cell;
   width: 50%;
-  color: #6d796a;
-  font-size: 0.75rem;
-  padding-left: 33px;
+  color: green;
+  font-size: 1rem;
+  padding-left: 20px;
 
   i {
     margin-top: 4px;
@@ -107,12 +106,12 @@
   background-size: 751px 211px;
 }
 
-.price {
+.shop-price {
   display: table-cell;
   width: 50%;
-  color: #6d796a;
-  font-size: 0.75rem;
-  text-align: right;
+  color: green;
+  font-size: 1rem;
+  padding-left: 70px;
 }
 
 .sprite-2x.icon-bag {
