add modal login

--- a/app/views/projects/_hero.html.haml
+++ b/app/views/projects/_hero.html.haml
@@ -33,10 +33,9 @@
               %a{:href => "/signup"}
                 %i{class: "fa fa-plus-circle"}
                 会員登録
-            %li
-              %a{:href => "/login"}
-                %i{class: "fa fa-user"}
-                ログイン
+            %li#login-show
+              %i{class: "fa fa-user"}
+              ログイン
 
 
 
