--- a/app/views/share/_footer.html.haml
+++ b/app/views/share/_footer.html.haml
@@ -20,7 +20,7 @@
     %p.copy COPYRIGHT 2017 0WNERS
     %ul.f-sns-area
       %li.hover-showcase
-        %a{:href => "#"}
-          %i.sprite-2x.f-logo
-        %a{:href => "https://twitter.com/OWNERS1201"}
-        %i.sprite-2x.tw-logo
+      %a{:href => "#"}
+      %i{class: "fa fa-facebook-square"}
+      %a{:href => "https://twitter.com/OWNERS1201"}
+      %i.sprite-2x.tw-logo
