make modal close btn

--- a/app/views/projects/_hero.html.haml
+++ b/app/views/projects/_hero.html.haml
@@ -29,10 +29,9 @@
                 %i{class: "fa fa-clipboard"}
                 プロジェクト投稿
           - else
-            %li
-              %a{:href => "/signup"}
-                %i{class: "fa fa-plus-circle"}
-                会員登録
+            %li.signup-show
+              %i{class: "fa fa-plus-circle"}
+              会員登録
             %li#login-show
               %i{class: "fa fa-user"}
               ログイン
