--- a/app/views/projects/_modal-signup.html.haml
+++ b/app/views/projects/_modal-signup.html.haml
@@ -1,10 +1,10 @@
-#login-modal.login-modal-wrapper
+#signup-modal.signup-modal-wrapper
   .modal
     .close-modal
       %i.fa.fa-2x.fa-times
-    #login-form
-      %h2 Emailログイン
+    #signup-form
+      %h2 Emailで新規登録
       %form{:action => "#"}
         %input.form-control{:placeholder => "メールアドレス", :type => "text"}/
         %input.form-control{:placeholder => "パスワード", :type => "password"}/
-        #submit-btn ログイン
+        #submit-btn 新規登録
