--- a/app/views/projects/_product-data.html.haml
+++ b/app/views/projects/_product-data.html.haml
@@ -19,11 +19,11 @@
     %dl.order-box
       %a.btn-green{:href => "/projects/#{@project.id}/orders"} お申込み
 
-    - if Like.find_by(user_id: @current_user.id, project_id: @project.id)
-      = link_to "/likes/#{@project.id}/destroy",{method: "post"}, class: "favorite-btn" do
-        %span.fa.fa-heart#like-btn-unlike
-    - else
-      = link_to"/likes/#{@project.id}/create", {method: "post"}, class: "favorite-btn" do
-        %span.fa.fa-heart#like-btn
+    / - if Like.find_by(user_id: @current_user.id, project_id: @project.id)
+    /   = link_to "/likes/#{@project.id}/destroy",{method: "post"}, class: "favorite-btn" do
+    /     %span.fa.fa-heart#like-btn-unlike
+    / - else
+    /   = link_to"/likes/#{@project.id}/create", {method: "post"}, class: "favorite-btn" do
+    /     %span.fa.fa-heart#like-btn
 
-      = @likes_count
+    /   = @likes_count
