--- a/app/assets/stylesheets/project/hero.scss
+++ b/app/assets/stylesheets/project/hero.scss
@@ -41,6 +41,8 @@
     margin-right: 40px;
     position: relative;
     line-height: 0;
+    color: white;
+    cursor: pointer;
 
       a {
         color: white;
