--- a/app/views/share/_footer.html.haml
+++ b/app/views/share/_footer.html.haml
@@ -23,4 +23,4 @@
       %a{:href => "#"}
       %i{class: "fa fa-facebook-square"}
       %a{:href => "https://twitter.com/OWNERS1201"}
-      %i.sprite-2x.tw-logo
+      %i{class: "fa fa-twitter-square"}
