--- a/app/views/projects/_hero.html.haml
+++ b/app/views/projects/_hero.html.haml
@@ -42,4 +42,4 @@
     .lead
       %h2.sprite-2.message00 とっておきの、オーナーになろう
       %h2.sprite-2.message02 own your favorite, this is yours.
-      %a.about-btn{:href => "#message"} Ownersついて
+      %a.about-btn{:href => ".text01"} Ownersついて
